correcting overflow for phone

--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ h4 {
   display: inline-block;
   margin-right: auto;
   margin-left: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .subtext {
